--- a/ios/gofinances/Supporting/Expo.plist
+++ b/ios/gofinances/Supporting/Expo.plist
@@ -11,7 +11,7 @@
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@fellipearaujo/gofinances</string>
+    <string>https://exp.host/@LeoTexx/gofinances</string>
     <key>EXUpdatesReleaseChannel</key>
     <string>default</string>
   </dict>
