--- a/app.json
+++ b/app.json
@@ -25,6 +25,6 @@
       "barStyle": "light-content"
     },
     "description": "",
-    "githubUrl": "https://github.com/LeoTexx/gofinances"
+    "githubUrl": "https://github.com/LeoTexx/goFinances"
   }
 }
