--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
@@ -26,6 +27,9 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "intl": "^1.2.5",
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-mock": "^27.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.12.2",
@@ -48,10 +52,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.4.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.1",
+    "jest-expo": "^44.0.1",
+    "jest-styled-components": "^7.0.8",
+    "ts-jest": "^27.1.3",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": "@testing-library/jest-native/extend-expect"
   },
   "private": true
 }
